# agentflow

./: .env.example  .gitignore  01-multi-agent-system.md  docker-compose.yml  run.py
backend/: Dockerfile  config.py  llm.py  main.py  models.py  pyproject.toml
backend/agents/: __init__.py  base.py  code.py  critic.py  data.py  report.py  research.py
backend/api/: routes.py
backend/engine/: executor.py
backend/orchestrator/: planner.py
backend/state/: manager.py
backend/tools/: __init__.py  code_execution.py  registry.py  web_search.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentNode.tsx  ChatPanel.tsx  ExecutionGraph.tsx  SessionHistory.tsx
frontend/src/hooks/: useSession.ts
frontend/src/types/: index.ts
